--- a/wp-content/themes/inclusiva/assets/styles/layouts/_archives.scss
+++ b/wp-content/themes/inclusiva/assets/styles/layouts/_archives.scss
@@ -88,7 +88,7 @@
 			}
 			@media(min-width: $screen-sm-min){ 
 				figure.producto{
-					@include make-xs-column(4);
+					@include make-xs-column(3);
 					.thumbnail{
 						background-color: $brown--lighter;
 						padding: 0;
@@ -101,7 +101,7 @@
 							background-color: $white--smoke;
 							padding: 15px;
 							h3{
-								@include entry-title(sm);
+								@include entry-title(xs);
 								margin: 0;
 								padding: 5px 0;
 								a{
