Mejorando el searchbox

--- a/wp-content/themes/inclusiva/assets/styles/layouts/_archives.scss
+++ b/wp-content/themes/inclusiva/assets/styles/layouts/_archives.scss
@@ -77,7 +77,7 @@
 			}
 		}
 	}
-	&.post-type-archive-producto{
+	&.post-type-archive-producto, &.tax-clasificacion{
 		.masshead{
 			background-image: url('../images/masshead--producto.jpg') !important;
 			@include full-bg();
