Problemas de z-index en el slider principal

--- a/wp-content/themes/inclusiva/assets/styles/layouts/_home.scss
+++ b/wp-content/themes/inclusiva/assets/styles/layouts/_home.scss
@@ -269,7 +269,7 @@
 		.owl-stage-outer{
 			.owl-stage{
 				background-color: $gray--text;
-				.owl-item{
+				.owl-item.active.center{
 					figure{
 						.banner__txt{
 							display:block; 
