--- a/wp-content/themes/inclusiva/assets/styles/layouts/_pages.scss
+++ b/wp-content/themes/inclusiva/assets/styles/layouts/_pages.scss
@@ -113,7 +113,7 @@
 		}
 	}
 
-	&.page-template-template-proyectos{
+	&.page-template-template-proyectos, &.page-template-template-proyectos-subpage{
 		.proyecto{
 			@include container-fixed();
 			text-align: center;
@@ -218,7 +218,7 @@ article{
 }
 
 @media(max-width: $screen-xs-max){
-	.page-template-template-proyectos{
+	.page-template-template-proyectos, .page-template-template-proyectos-subpage{
 		.proyecto{	
 			@include make-sm-column(6);
 			padding: 30px 0;
@@ -232,7 +232,7 @@ article{
 }
 
 @media(min-width: $screen-sm-min){
-	.page-template-template-proyectos{
+	.page-template-template-proyectos, .page-template-template-proyectos-subpage{
 		.proyecto{	
 			position: absolute;
 			bottom: 15px;
