--- a/wp-content/themes/inclusiva/assets/styles/layouts/_sidebar.scss
+++ b/wp-content/themes/inclusiva/assets/styles/layouts/_sidebar.scss
@@ -16,61 +16,78 @@
 			@include opensans(light);
 			-webkit-font-smoothing: antialiased;
 		}
-		ul{
+		.nav{
+			&.nav-sidebar{
+			ul{
 
-			margin: 15px 0 0;
-			padding: 0;
-			list-style-type: none;
-			li{
-				time{
-					@include meta-text();
-					padding: 3px 15px 0; 
-				}
-				a{
-					display: block;
-					padding: 7px 15px;
-					border-bottom: 1px solid $white--smoke;
-					color: $gray--light;
-					font-size: 14px;
-					&:hover{
-						background-color: transparent;
-						color: $red--google--hover;
-					}
-				}
-				&.current-menu-item{
-					a{
-						background-color: transparent;
-						color: $red--google;
-						border-left: 3px solid $red--google;
-						@include opensans(bold);
-					}
-				}
-				&.dropdown{
-
-				}
-			}
-			&.related-posts{
+				margin: 15px 0 0;
+				padding: 0;
+				list-style-type: none;
 				li{
+					time{
+						@include meta-text();
+						padding: 3px 15px 0; 
+					}
 					a{
-						padding-top: 1px;
-						color: $red--google;
+						display: block;
+						padding: 7px 15px;
+						border-bottom: 1px solid $white--smoke;
+						color: $gray--light;
+						font-size: 14px;
 						&:hover{
+							background-color: transparent;
 							color: $red--google--hover;
 						}
 					}
-					p{
-						padding: 7px 15px; 
+					&.current-menu-item{
+						a{
+							background-color: transparent;
+							color: $red--google;
+							border-left: 3px solid $red--google;
+							@include opensans(bold);
+						}
+					}
+					&.dropdown{
+
+					}
+					&.open{
+						 .dropdown-menu{
+						 	position: relative;
+						 	float: none;
+						 	margin-top: 0;
+						 	box-shadow: none;
+						 	li{
+						 		a{
+						 			font-size: 12px;
+						 		}
+						 	}
+						 }
+					}
+				}
+				&.related-posts{
+					li{
+						a{
+							padding-top: 1px;
+							color: $red--google;
+							&:hover{
+								color: $red--google--hover;
+							}
+						}
+						p{
+							padding: 7px 15px; 
+						}
+					}
+				}
+				&#recentcomments, &.plain{
+					li{
+						padding: 7px 15px;
+						p{
+							text-align: left;
+						}
 					}
 				}
 			}
-			&#recentcomments, &.plain{
-				li{
-					padding: 7px 15px;
-					p{
-						text-align: left;
-					}
-				}
-			}
+		}
 		}
 		.tagcloud, .textwidget{
 			padding: 7px 15px; 
