--- a/wp-content/themes/inclusiva/assets/styles/main.scss
+++ b/wp-content/themes/inclusiva/assets/styles/main.scss
@@ -52,6 +52,7 @@
 @import "components/_wp-classes";
 @import "components/_menu";
 @import "components/_accordion"; 
+@import "components/_events"; 
 @import "layouts/_header";
 @import "layouts/_sidebar";
 @import "layouts/_footer";
