--- a/wp-content/themes/inclusiva/assets/styles/layouts/_archives.scss
+++ b/wp-content/themes/inclusiva/assets/styles/layouts/_archives.scss
@@ -77,7 +77,7 @@
 			}
 		}
 	}
-	&.post-type-archive-producto, &.tax-clasificacion{
+	&.post-type-archive-producto, &.tax-clasificacion, &.tax-marca, &.tax-productor{
 		.masshead{
 			background-image: url('../images/masshead--producto.jpg') !important;
 			@include full-bg();
@@ -174,6 +174,18 @@
 							  }
 							}
 							@include fadeInUp();
+						}
+					}
+				}
+			}
+		}
+		.sidebar{
+			.widget{
+				form#searchform{
+					.checkbox{
+						.cb__post, .cb__documentos, .cb__convocatorias, .cb__servicios, .cb__tribe_events{
+							display: none;
+							visibility: hidden;
 						}
 					}
 				}
