--- a/wp-content/themes/inclusiva/assets/styles/main.scss
+++ b/wp-content/themes/inclusiva/assets/styles/main.scss
@@ -53,6 +53,7 @@
 @import "components/_menu";
 @import "components/_accordion"; 
 @import "components/_events"; 
+@import "components/_gravityforms"; 
 @import "layouts/_header";
 @import "layouts/_sidebar";
 @import "layouts/_footer";
