--- a/wp-content/themes/inclusiva/assets/styles/common/_global.scss
+++ b/wp-content/themes/inclusiva/assets/styles/common/_global.scss
@@ -67,19 +67,12 @@ body{
   @include opensans();
   font-size: 14px;
   line-height: 1.6;
+  color: $red--google !important;
   &.page, &.archive, &.single{
     background-color: $white--smoke;
     .wrap{
       position: relative;
       z-index: 1;
-      /*background-color: $white;
-      -moz-box-shadow: 0 1px 2px rgba(0,0,0,0.075);
-      -webkit-box-shadow: 0 1px 2px rgba(0,0,0,0.075);
-      -o-box-shadow: 0 1px 2px rgba(0,0,0,0.075);
-      box-shadow: 0 1px 2px rgba(0,0,0,0.075);
-      margin-top: -130px;
-      padding-left: 30px;
-      padding-right: 30px;*/
       margin-bottom: 60px;
       .page-header{
         margin: 70px 0 20px;
