--- a/wp-content/themes/inclusiva/assets/styles/common/_global.scss
+++ b/wp-content/themes/inclusiva/assets/styles/common/_global.scss
@@ -147,6 +147,26 @@ table{
   }
 }
 
+ol{
+  &.breadcrumb{
+    background-color: transparent;
+    padding: 8px 0;
+    @include entry-title('xs');
+    li{
+      @include text-on-focus();
+        a{
+          @include text-on-focus();
+          &:hover{
+            border-bottom: 1px solid $white;
+          }
+        }
+      &.item-current{
+        display: none;
+      }
+    }
+  }
+}
+
 article, figure{
   img{
     border:1px solid $gray--light;
@@ -235,8 +255,15 @@ article, figure{
       }
     }
     @media(min-width: $screen-sm-min){
-      .page-header{
-        margin: 200px 0 20px;
+      .container{
+        position: relative;
+        height: 300px;
+        .page-header{
+          position: absolute;
+          bottom: 0;
+          left: 0;
+          right: 0;      
+        }
       }
     }
   }
@@ -354,6 +381,7 @@ SHARING
         padding-right: 0;
         @include border-radius(0);
         border: 0 none;
+        background-color: $gray;
       }
     }
     li.share-header{
@@ -746,8 +774,9 @@ article{
     .page-header{
       h1{
         small{
-          float: right;
-          padding-top: 15px;
+          display: block;
+          font-size: 45%;
+          padding-top: 7px;
         }
       }
     }
