--- a/wp-content/themes/inclusiva/assets/styles/layouts/_home.scss
+++ b/wp-content/themes/inclusiva/assets/styles/layouts/_home.scss
@@ -624,12 +624,11 @@
   									padding-left: 0px;
   									padding-right: 0px;
   									a{	
-  										text-transform: uppercase;
-  										display: block;
-  										padding-top: 5px;
-  										padding-bottom: 5px;
+  										@include entry-title('xs');
   										@include text-on-focus();
-  										@include opensans();
+  										&:hover{
+  											border-bottom: 1px solid $white;
+  										}
   									}
   								}
   								.sl__home__title{
