--- a/wp-content/themes/inclusiva/assets/styles/main.scss
+++ b/wp-content/themes/inclusiva/assets/styles/main.scss
@@ -21,6 +21,7 @@
 @import "../../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/_input-groups.scss";
 @import "../../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/_navs.scss";
 @import "../../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/_navbar.scss";
+@import "../../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/_breadcrumbs.scss";
 @import "../../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/_pagination.scss";
 @import "../../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/_pager.scss";
 @import "../../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap/_labels.scss";
