Mejora de breadcrumbs

--- a/wp-content/themes/inclusiva/assets/styles/common/_global.scss
+++ b/wp-content/themes/inclusiva/assets/styles/common/_global.scss
@@ -161,7 +161,9 @@ ol{
           }
         }
       &.item-current{
-        display: none;
+        a{
+          display: none;
+        }
       }
     }
   }
