Mejoramiento del modal en el home

--- a/wp-content/themes/inclusiva/assets/styles/layouts/_home.scss
+++ b/wp-content/themes/inclusiva/assets/styles/layouts/_home.scss
@@ -282,6 +282,10 @@
 		}
 	}
 	.sl__modal-home{
+		.modal-header{
+			background-color: $yellow--light;
+			color: $brown;
+		}
 		.owl-nav{
 			position: absolute;
 			bottom: 0;
