Dinamizando banners de serviagro

--- a/wp-content/themes/inclusiva/assets/styles/components/_events.scss
+++ b/wp-content/themes/inclusiva/assets/styles/components/_events.scss
@@ -8,7 +8,9 @@
 			margin-bottom: 30px;
 			.banner{
 				@include make-sm-column(6);
-				@include make-sm-column-offset(3);
+				img{
+					border: 1px solid transparent;
+				}
 			}
 		}
 	}
